[metadata]
name = spark-tests
version = 1.1.0
author = Edson Susumu Asaga
author_email = susumu.asaga@gmail.com
description = A test framework for Python Spark application development.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
