[metadata]
name = spark-tests
version = 1.1.1
author = Edson Susumu Asaga
author_email = susumu.asaga@gmail.com
description = A test framework for Python Spark application development.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/susumuasaga/spark-tests
project_urls =
    Bug Tracker = https://github.com/susumuasaga/spark-tests/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
